--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,22 +5,44 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <% if flash[:notice] %>
-    <div class="notigication is-primary global-notification">
-      <div class="notice"><%= notice %></div>
+    <div class="notification is-primary global-notification">
+      <p class="notice"><%= notice %></p>
     </div>
     <% end %>
-    <% if flas[:alert] %>
-    <div class="norigication is-danger global-norification">
+    <% if flash[:alert] %>
+    <div class="notification is-danger global-notification">
       <p class="alert"><%= alert %></p>
     </div>
     <% end %>
-    
+    <nav class="navbar is-info">
+      <div class="navbar-brand">
+      <%= link_to root_path, class: "navbar-item" do %>
+        <h1 class="title is-5">Twittter</h1>
+        <% end %>
+        <div class="navbar-burger burger" data-target="navbarExample">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+
+      <div id="navbarExample" class="navbar-menu">
+        <div class="navbar-end">
+          <div class="field is-groupend">
+            <p class="control">
+              <%= link_to 'New Tweeet', new_tweeet_path, class: "button is-info is-inverted" %>
+            </p>
+            <p class="control">Sign Up</p>
+          </div>
+        </div>
+      </div>
+    </nav>
     <%= yield %>
   </body>
 </html>
