--- a/app/views/tweeets/_feed.html.erb
+++ b/app/views/tweeets/_feed.html.erb
@@ -1,31 +1,36 @@
 <div class="column is-half">
+	<% if user_signed_in? %>
 	<article class="media box">
-		<figure class="media-left">
-			<p class="image is-64x64">
-				<img src="https://bulma.io/images/placeholders/64x64.png" alt="" srcset="">
-			</p>
-		</figure>
+		<div class="media-left">
+			<figure class="image is-64x64">
+				<%= gravatar_image_tag(current_user.email, size: 64, alt: current_user.name) %>
+			</figure>
+		</div>
 		<div class="media-content">
 			<%= render 'tweeets/form' %>
 		</div>
 	</article>
+	<% end %>
 
 	<% @tweeets.each do | tweeet | %>
 	<div class="box">
 		<article class="media">
 			<div class="media-left">
 				<figure class="image is-64x64">
-					<img src="https://bulma.io/images/placeholders/64x64.png" alt="" srcset="">
+					<%= gravatar_image_tag(tweeet.user.email, size: 64, alt: tweeet.user.name) %>
 				</figure>
 			</div>
 			<div class="media-content">
 				<div class="content">
-					<strong>Andy Leverenz</strong><br>
-					<small>@webcrunch</small><br>
+					<strong>
+						<%= tweeet.user.name %></strong><br>
+					<small>
+						<%= tweeet.user.username %></small><br>
 					<p>
 						<%= tweeet.tweeet %>
 					</p>
 				</div>
+				<% if user_signed_in? && current_user.id == tweeet.user_id %>
 				<nav class="level">
 					<div class="level-left is-mobile">
 						<%= link_to tweeet, class: "level-item" do %>
@@ -39,9 +44,9 @@
 						<%end%>
 					</div>
 				</nav>
+				<% end %>
 			</div>
 		</article>
 	</div>
 	<% end %>
 </div>
-
