follow機能の追加

--- a/app/views/tweeets/_profile.html.erb
+++ b/app/views/tweeets/_profile.html.erb
@@ -21,27 +21,10 @@
 			</article>
 		</div>
 		<div class="panel-block">
-			<div class="level is-mobile">
-				<div class="level-item has-centered-text">
-					<div>
-						<p class="heading">Tweets</p>
-						<p class="title is-6"><%= current_user.tweeets.count %></p>
-					</div>
-				</div>
-				<div class="level-item has-centered-text">
-					<div>
-						<p class="heading">Following</p>
-						<p class="title is-6">123</p>
-					</div>
-				</div>
-				<div class="level-item has-centered-text">
-					<div>
-						<p class="heading">Followers</p>
-						<p class="title is-6">456k</p>
-					</div>
-				</div>
-
-			</div>
+			<section class="media">
+				<%= render 'shared/stats' %>
+				<%= render 'follow_form' %>
+			  </section>
 		</div>
 	</nav>
 </div>
