--- a/app/views/tweeets/_who-to-follow.html.erb
+++ b/app/views/tweeets/_who-to-follow.html.erb
@@ -1,58 +1,31 @@
+<% if user_signed_in? %>
 <div class="column">
 	<nav class="panel">
 		<p class="panel-heading">
 			Who to Follow
 		</p>
+	
+	<% @users.each do | user |%>
+	<% if current_user.following?(user) %> 
+	<div class="panel-block">
+		<article class="media">
+			<div class="media-left">
+				<figure class="image is-32x32">
+					<img src="https://bulma.io/images/placeholders/64x64.png" alt="" srcset="">
+				</figure>
+			</div>
+			<div class="media-content">
+				<div class="content">
+					<p>
+						<strong><%=user.name%></strong>
+						<small>@johnsmith</small>
+					</p>
+				</div>
+			</div>
+		</article>
 	</nav>
-	<div class="panel-block">
-		<article class="media">
-			<div class="media-left">
-				<figure class="image is-32x32">
-					<img src="https://bulma.io/images/placeholders/64x64.png" alt="" srcset="">
-				</figure>
-			</div>
-			<div class="media-content">
-				<div class="content">
-					<p>
-						<strong>John Smith</strong>
-						<small>@johnsmith</small>
-					</p>
-				</div>
-			</div>
-		</article>
 	</div>
-	<div class="panel-block">
-		<article class="media">
-			<div class="media-left">
-				<figure class="image is-32x32">
-					<img src="https://bulma.io/images/placeholders/64x64.png" alt="" srcset="">
-				</figure>
-			</div>
-			<div class="media-content">
-				<div class="content">
-					<p>
-						<strong>John Smith</strong>
-						<small>@johnsmith</small>
-					</p>
-				</div>
-			</div>
-		</article>
-	</div>
-	<div class="panel-block">
-		<article class="media">
-			<div class="media-left">
-				<figure class="image is-32x32">
-					<img src="https://bulma.io/images/placeholders/64x64.png" alt="" srcset="">
-				</figure>
-			</div>
-			<div class="media-content">
-				<div class="content">
-					<p>
-						<strong>John Smith</strong>
-						<small>@johnsmith</small>
-					</p>
-				</div>
-			</div>
-		</article>
-	</div>
+	<% end %>
+	<% end %>
 </div>
+<% end %>
