--- a/app/views/tweeets/_follow_form.html.erb
+++ b/app/views/tweeets/_follow_form.html.erb
@@ -1,9 +1,9 @@
-<% if not current_user %>
+<% if current_user != @user %>
 <div id="follow_form">
 	<% if current_user.following?(@user) %>
-	<%= render 'unfollow' %>
+	<%= render 'tweeets/unfollow' %>
 	<% else %>
-	<%= render 'follow' %>
+	<%= render 'tweeets/follow' %>
 	<% end %>
 </div>
 <% end %>
