--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,37 +1,108 @@
-
-<p>
-  <strong>User:</strong>
-  <%= @user.name %>
-</p>
-<div class="column is-one-quarter">
-		<nav class="panel">
-			<p class="panel-heading">Profile</p>
-			<div class="panel-block">
-				<article class="media">
-					<div class="media-left">
-						<figure class="image is-64x64">
-							<img src="https://bulma.io/images/placeholders/64x64.png" alt="" srcset="">
-						</figure>
+<section class="section">
+	<div class="container">
+		<div class="columns">
+			<div class="column is-one-quarter">
+				<nav class="panel">
+					<p class="panel-heading">Profile</p>
+					<div class="panel-block">
+						<article class="media">
+							<div class="media-left">
+								<figure class="image is-64x64">
+									<img src="https://bulma.io/images/placeholders/64x64.png" alt="" srcset="">
+								</figure>
+							</div>
+							<div class="media-content">
+								<div class="content">
+									<p>
+										<strong>
+											<%= @user.name %></strong><br>
+										<small>
+											<%= @user.username %></small>
+									</p>
+								</div>
+							</div>
+						</article>
 					</div>
-					<div class="media-content">
-						<div class="content">
-							<p>
-								<strong>
-									<%= @user.name %></strong><br>
-								<small>
-									<%= @user.username %></small>
-							</p>
+					<div class="panel-block">
+						<section class="media">
+							<%= render 'shared/stats' %>
+							<%= render 'tweeets/follow_form' %>
+						</section>
+					</div>
+				</nav>
+			</div>
+			<div class="column is-half">
+				<div class="box">
+					<% @tweeets.each do | tweeet | %>
+					<article class="media">
+						<div class="media-left">
+							<figure class="image is-64x64">
+								<%= gravatar_image_tag(tweeet.user.email, size: 64, alt: tweeet.user.name) %>
+							</figure>
 						</div>
-					</div>
-				</article>
+						<div class="media-content">
+							<div class="content">
+								<strong>
+									<%= link_to user_path(tweeet.user_id) do %>
+									<%= tweeet.user.name %>
+									<% end %>
+								</strong><br>
+								<small>
+									<%= tweeet.user.username %></small><br>
+								<p>
+									<%= tweeet.tweeet %>
+								</p>
+							</div>
+							<nav class="level">
+								<div class="level-left is-mobile">
+									<% if user_signed_in? && current_user.id == tweeet.user_id %>
+									<%= link_to edit_tweeet_path(tweeet), clas: "level-item" do %>
+									<span class="icon"><i class="fa fa-pencil" aria-hidden="true"></i></span>
+									<% end %>
+									<%= link_to tweeet, method: :delete, data: { confirm: "Are you sure you want to delete this tweeet?" } do %>
+									<span class="icon"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
+									<% end %>
+									<% end %>
+									<%= render 'tweeets/likes', tweeet: tweeet %>
+								</div>
+							</nav>
+						</div>
+					</article>
+					<% end %>
+				</div>
 			</div>
-			<div class="panel-block">
-				<section class="media">
-					<%= render 'shared/stats' %>
-					<%= render 'tweeets/follow_form' %>
-				  </section>
+			<% if user_signed_in? %>
+			<div class="column">
+				<nav class="panel">
+					<p class="panel-heading">
+						Who to Follow
+					</p>
+
+					<% @users.each do | user |%>
+					<% if @user.following?(user) %>
+					<div class="panel-block">
+						<article class="media">
+							<div class="media-left">
+								<figure class="image is-32x32">
+									<img src="https://bulma.io/images/placeholders/64x64.png" alt="" srcset="">
+								</figure>
+							</div>
+							<div class="media-content">
+								<div class="content">
+									<p>
+										<strong>
+											<%=user.name%></strong>
+										<small>@johnsmith</small>
+									</p>
+								</div>
+							</div>
+						</article>
+				</nav>
 			</div>
-		</nav>
+			<% end %>
+			<% end %>
+		</div>
+		<% end %>
 	</div>
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+	</div>
+	</div>
