--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,9 +25,13 @@
 					</div>
 					<div class="panel-block">
 						<section class="media">
-							<%= render 'shared/stats' %>
-							<%= render 'tweeets/follow_form' %>
+							<p>
+								<%= render 'shared/stats' %>
+							</p>
 						</section>
+					</div>
+					<div class="panel-block">
+						<%= render 'tweeets/follow_form' %>
 					</div>
 				</nav>
 			</div>
@@ -77,7 +81,6 @@
 					<p class="panel-heading">
 						Who to Follow
 					</p>
-
 					<% @users.each do | user |%>
 					<% if @user.following?(user) %>
 					<div class="panel-block">
@@ -97,12 +100,12 @@
 								</div>
 							</div>
 						</article>
+					</div>
+					<% end %>
+					<% end %>
 				</nav>
 			</div>
 			<% end %>
-			<% end %>
 		</div>
-		<% end %>
-	</div>
 	</div>
 	</div>
