--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,15 +1,25 @@
 <% @user ||= current_user %>
-<div class="stats">
-  <!-- <a href="<%= following_user_path(@user) %>"> -->
-    <strong id="following" class="stat">
-      <%= @user.following.count %>
-    </strong>
-    following
-  <!-- </a> -->
-  <!-- <a href="<%= followers_user_path(@user) %>"> -->
-    <strong id="followers" class="stat">
-      <%= @user.followers.count %>
-    </strong>
-    followers
-  <!-- </a> -->
-</div>
+  <div class="level-item has-text-centered">
+    <div>
+      <p class="heading">ツイート</p>
+      <strong id="following" class="stat">
+        <%= @user.tweeets.count %>
+      </strong>
+    </div>
+  </div>
+  <div class="level-item has-text-centered">
+    <div>
+      <p class="heading">フォロー</p>
+      <strong id="following" class="stat">
+        <%= @user.following.count %>
+      </strong>
+    </div>
+  </div>
+  <div class="level-item has-text-centered">
+    <div>
+      <p class="heading">フォロワー</p>
+      <strong id="followers" class="stat">
+        <%= @user.followers.count %>
+      </strong>
+    </div>
+  </div>
