--- a/app/views/tweeets/index.html.erb
+++ b/app/views/tweeets/index.html.erb
@@ -8,6 +8,7 @@
       <% end %>
       <%= render 'feed' %>
       <%= render 'who-to-follow' %>
+      <%= render 'who-to-follower' %>
     </div>
   </div>
 </section>
