--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -3,7 +3,9 @@
     <div>
       <p class="heading">ツイート</p>
       <strong id="following" class="stat">
+        <%= link_to user_path(current_user) do %>
         <%= @user.tweeets.count %>
+        <% end %>
       </strong>
     </div>
   </div>
@@ -11,7 +13,9 @@
     <div>
       <p class="heading">フォロー</p>
       <strong id="following" class="stat">
+        <%= link_to follow_user_path(current_user) do %>
         <%= @user.following.count %>
+        <% end %>
       </strong>
     </div>
   </div>
@@ -19,7 +23,9 @@
     <div>
       <p class="heading">フォロワー</p>
       <strong id="followers" class="stat">
+        <%= link_to follower_user_path(current_user) do %>
         <%= @user.followers.count %>
+        <% end %>
       </strong>
     </div>
   </div>
