--- a/app/views/tweeets/_who-to-follow.html.erb
+++ b/app/views/tweeets/_who-to-follow.html.erb
@@ -4,27 +4,10 @@
 		<p class="panel-heading">
 			フォロー
 		</p>
-	
-	<% @users.each do | user |%>
-	<% if current_user.following?(user) %> 
-	<div class="panel-block">
-		<article class="media">
-			<div class="media-left">
-				<figure class="image is-32x32">
-					<img src="https://bulma.io/images/placeholders/64x64.png" alt="" srcset="">
-				</figure>
-			</div>
-			<div class="media-content">
-				<div class="content">
-					<p>
-						<strong><%=user.name%></strong>
-						<small>@johnsmith</small>
-					</p>
-				</div>
-			</div>
-		</article>
+		<% @users.each do | user |%>
+		<% if current_user.following?(user) %>
+		<%= render 'follow_profile' ,user: user %>
 	</nav>
 	<% end %>
 	<% end %>
-<% end %>
-
+	<% end %>
