--- a/app/views/tweeets/_who-to-follower.html.erb
+++ b/app/views/tweeets/_who-to-follower.html.erb
@@ -5,25 +5,8 @@
 	</p>
 	<% @users.each do | user |%>
 	<% if current_user.follower?(user) %>
-	<div class="panel-block">
-		<article class="media">
-			<div class="media-left">
-				<figure class="image is-32x32">
-					<img src="https://bulma.io/images/placeholders/64x64.png" alt="" srcset="">
-				</figure>
-			</div>
-			<div class="media-content">
-				<div class="content">
-					<p>
-						<strong>
-							<%=user.name%></strong>
-						<small>@johnsmith</small>
-					</p>
-				</div>
-			</div>
-		</article>
+	<%= render 'follow_profile' , user: user %>
 </nav>
-</div>
 <% end %>
 <% end %>
 
