--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,9 @@
             <p class="control">
               <%= link_to 'New Tweeet', root_path, class: "button is-info is-inverted" %>
             </p>
+            <p class="control">
+                <%= link_to 'Twittter News', news_index_path, class: "button is-info" %>
+              </p>
             <% if user_signed_in? %>
             <p class="control">
               <%= link_to current_user.name, edit_user_registration_path, class: "button is-info" %>
