--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -8,29 +8,13 @@
 		</figure>
 		<div class="media-content">
 			<div class="content">
-				<p>
-					<strong>
-						<%= link_to news['url'] do %>
+					<h3>
+						<%= link_to news['url'] ,target: '_blank' do %>
 						<%= news['title'] %>
-						<% end %></strong>
-					<br>
-					<%= news['description'] %><br>
-
-					<%= news['content'] %>
-					<br>
-					<%= news['publishedAt'] %><br>
-					<%= news['author'] %><br>
-				</p>
-			</div>
-			<nav class="level is-mobile">
-				<div class="level-left">
-					<a class="level-item">
-						<%= link_to news['url'] do %>
-						<span class="icon"><i class="fa fa-link" aria-hidden="ture"></i></span>
-						<% end %>
-					</a>
+						<% end %></h3>
+					<p><%= news['description'] %></p>
+					<p><%= news['author'] %> <%= news['publishedAt'].sub!(/T.*/m, "") %></p>
 				</div>
-			</nav>
 		</div>
 	</article>
 	<% end %>
