--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,39 +32,37 @@
       <%= link_to root_path, class: "navbar-item" do %>
       <h1 class="title is-5">Twittter</h1>
       <% end %>
-      <div class="navbar-burger burger" data-target="navbarExample">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
+      <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
     </div>
 
-    <div id="navbarExample" class="navbar-menu">
+    <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-end">
-        <div class="navbar-item">
-          <div class="field is-grouped">
-            <p class="control">
-              <%= link_to 'New Tweeet', root_path, class: "button is-info is-inverted" %>
-            </p>
-            <p class="control">
-                <%= link_to 'Twittter News', news_index_path, class: "button is-info" %>
-              </p>
-            <% if user_signed_in? %>
-            <p class="control">
-              <%= link_to current_user.name, edit_user_registration_path, class: "button is-info" %>
-            </p>
-            <p>
-              <%= link_to "Logout", destroy_user_session_path, method: :delete, class:"button is-info" %>
-            </p>
-            <% else %>
-            <p class="control">
-              <%= link_to 'Sing In', new_user_session_path, class: "button is-info" %>
-            </p>
-            <% end %>
-            <p class="control">
-              <%= link_to 'Sign Up', new_user_registration_path, class: "button is-info" %>
-            </p>
-          </div>
+        <div class="navbar-item has-background-info	">
+          <p class="control">
+            <%= link_to 'New Tweeet', root_path, class: "has-text-white	is-info is-inverted navbar-item" %>
+          </p>
+          <p class="control">
+            <%= link_to 'Twittter News', news_index_path, class: "has-text-white	is-info navbar-item" %>
+          </p>
+          <% if user_signed_in? %>
+          <p class="control">
+            <%= link_to current_user.name, edit_user_registration_path, class: "has-text-white	is-info navbar-item" %>
+          </p>
+          <p class="control">
+            <%= link_to "Logout", destroy_user_session_path, method: :delete, class:"has-text-white	is-info navbar-item" %>
+          </p>
+          <% else %>
+          <p class="control">
+            <%= link_to 'Sing In', new_user_session_path, class: "has-text-white	is-info navbar-item" %>
+          </p>
+          <% end %>
+          <p class="control">
+            <%= link_to 'Sign Up', new_user_registration_path, class: "has-text-white	is-info navbar-item" %>
+          </p>
         </div>
       </div>
     </div>
