--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,18 +14,19 @@
  *= require_tree .
  
 */
- @import "bulma";
+@import "bulma";
 
- .navbar-brand .title {
-	 color: white;
- }
+.navbar-brand .title {
+	color: white;
+}
 
 
- // round images 
+// round images 
 .image {
-	 border-radius: 50%;
- 	img{
-		 border-radius: 50%;
+	border-radius: 50%;
+
+	img {
+		border-radius: 50%;
 	}
 }
 
@@ -35,26 +36,45 @@
 
 .checkbox {
 
-	.input{
+	.input {
 
-	box-shadow: none ;
-	border-color: white ;
+		box-shadow: none;
+		border-color: white;
 
 	}
-		
+
 }
 
 .button.is-link.is-outlined {
-	margin: 0.5rem 0 ;
+	margin: 0.5rem 0;
 }
 
 .news {
 	.image {
 		border-radius: 0;
-		
-		img{
+
+		img {
 			border-radius: 0;
-			max-height: 128px;
-	   }
-   }
+			margin-right: 3rem;
+		}
+	}
+}
+
+@media screen and (max-width: 480px) {
+	.news {
+		.image {
+			border-radius: 0;
+			margin-left: auto;
+			margin-right: auto;
+			max-height: 100%;
+			width: 100%;
+			height: 100%;
+			img {
+				border-radius: 0;
+				
+
+			}
+		}
+	}
+
 }
