--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,21 +1,29 @@
-<div class="container news">
-	<% @newses.each do |news| %>
-	<article class="media" style="margin-top: 2rem">
-		<figure class="media-left">
-			<p class="image is-128x128">
-				<%= image_tag(news['urlToImage']) %>
-			</p>
-		</figure>
-		<div class="media-content">
-			<div class="content">
+<section class="section">
+	<div class="container news">
+		<% @newses.each do |news| %>
+		<article class="columns">
+			<figure class="column is-one-fifth">
+				<p class="image">
+					<%= image_tag(news['urlToImage']) %>
+				</p>
+			</figure>
+			<div class="column">
+				<div class="content">
 					<h3>
 						<%= link_to news['url'] ,target: '_blank' do %>
 						<%= news['title'] %>
-						<% end %></h3>
-					<p><%= news['description'] %></p>
-					<p><%= news['author'] %> <%= news['publishedAt'].sub!(/T.*/m, "") %></p>
+						<% end %>
+					</h3>
+					<p>
+						<%= news['description'] %>
+					</p>
+					<p>
+						<%= news['author'] %>
+						<%= news['publishedAt'].sub!(/T.*/m, "") %>
+					</p>
 				</div>
-		</div>
-	</article>
-	<% end %>
-</div>
+			</div>
+		</article>
+		<% end %>
+	</div>
+</section>
